<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstTaskActivity">

    <Button
        android:id="@+id/fs2_confirm_button"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/confirm_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fs2_speak_button" />

    <TextView
        android:id="@+id/textViewTEST"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:text="@string/step1label"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTEST3"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_marginTop="236dp"
        android:textSize="40dp"
        android:text="@string/step2label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTEST" />

    <TextView
        android:id="@+id/textViewTEST2"
        android:layout_width="369dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:text="@string/firsttask_step2_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTEST3" />

    <TextView
        android:id="@+id/textViewTEST4"
        android:layout_width="369dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:text="@string/firsttask_step1_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTEST" />

    <ImageButton
        android:id="@+id/fs2_speak_button"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTEST2"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/f_next_button"
        android:layout_width="197dp"
        android:layout_height="57dp"
        android:layout_marginTop="96dp"
        android:text="@string/next_button_text"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fs2_speak_button" />

    <ImageButton
        android:id="@+id/fs1_speak_button"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTEST4"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/fs1_check"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/textViewTEST"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/fs2_check"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="336dp"
        app:layout_constraintStart_toEndOf="@+id/textViewTEST3"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/fs1_confirm_button"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/confirm_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fs1_speak_button" />


</androidx.constraintlayout.widget.ConstraintLayout>