<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alarm_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondTaskActivity"
    >

    <Button
        android:id="@+id/ss2_confirm_button"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/confirm_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss2_speak_button" />

    <TextView
        android:id="@+id/textViewTEST"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:text="@string/step1label"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTEST3"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_marginTop="236dp"
        android:textSize="40dp"
        android:text="@string/step2label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTEST" />

    <TextView
        android:id="@+id/textViewTEST2"
        android:layout_width="369dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:text="@string/secondtask_step2_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTEST3" />

    <TextView
        android:id="@+id/textViewTEST4"
        android:layout_width="369dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:text="@string/secondtask_step1_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTEST" />

    <ImageButton
        android:id="@+id/ss2_speak_button"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTEST2"
        tools:srcCompat="@drawable/mic"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <Button
        android:id="@+id/t_next_button"
        android:layout_width="197dp"
        android:layout_height="57dp"
        android:layout_marginTop="96dp"
        android:text="@string/next_button_text"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss2_speak_button" />

    <ImageButton
        android:id="@+id/ss1_speak_button"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTEST4"
        tools:srcCompat="@drawable/mic"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <ImageView
        android:id="@+id/ss1_check"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/textViewTEST"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/check" />

    <ImageView
        android:id="@+id/ss2_check"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="336dp"
        app:layout_constraintStart_toEndOf="@+id/textViewTEST3"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/check" />

    <Button
        android:id="@+id/ss1_confirm_button"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/confirm_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss1_speak_button" />

    <TextView
        android:id="@+id/calc_result_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/default_calc_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss1_speak_button" />

    <TextView
        android:id="@+id/calc_result_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/default_calc_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss2_speak_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
